Sostituita la favicon e aggiunte nuove immagine da utilizzare nel progetto progetto;

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpg" href="./src/assets/img/breaking-bad-logo-rug-toyslife-icon.jpg" />
+  <link rel="icon" type="image/jpg"
+    href="./src/assets/img/kisspng-walter-white-television-show-logo-amc-breaking-bad-5abba541179f29.1929777815222469770968.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Breaking Bad Cast</title>
 </head>
