--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpg"
-    href="./src/assets/img/kisspng-walter-white-television-show-logo-amc-breaking-bad-5abba541179f29.1929777815222469770968.png" />
+  <link rel="icon" type="image/jpg" href="./src/assets/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Breaking Bad Cast</title>
+  <title>Rick and Morty</title>
 </head>
 
 <body>
